maze.lessons.maze.island.IslandMaze.scala.error
Escaper:3: error: Unit does not take parameters
	while (!estSurBiscuit()) {nord();
                                      ^